# foundation

./: .gitignore  CMakeLists.txt  CREDITS.md  build.sh  defer.h  project.vim  todo.txt
foundation/: CMakeLists.txt  configure.in.h  reasons.cpp  reasons.h  types.h
foundation/adt/: array.h  ascii_string.cpp  ascii_string.h  slice.h  stack.h  types.h  utf8_string.h
foundation/adt/string/: ascii.cpp  ascii.h  utf8.cpp  utf8.h
foundation/array/: array.h
foundation/context/: context.cpp  system.cpp  system.h
foundation/format/: system.cpp  system.h
foundation/graphics/: types.h
foundation/hashing/: adler.cpp  adler.h  blake3.cpp  blake3.h  crc.h  hashable.h  murmur.cpp  murmur.h
foundation/hashtable/: hashtable.h
foundation/memory/: dlmalloc_config.h  std_allocator.h  system.cpp  system.h
foundation/profiler/: stopwatch.cpp  stopwatch.h  system.cpp  system.h
foundation/slice/: slice.h
foundation/stack/: stack.h
foundation/string/: ascii_string.cpp  ascii_string.h  ascii_string_formatters.h  intern.cpp  intern.h
foundation/timers/: system.cpp  system.h
src/libasm/: CMakeLists.txt  asm.cpp  configure.in.h
src/libasm-test/: CMakeLists.txt  main.cpp
src/libbinfmt/: CMakeLists.txt  ar.cpp  binfmt.cpp  coff.cpp  configure.in.h  cv.cpp  elf.cpp  io.cpp  macho.cpp  pe.cpp
src/libbinfmt/archive/: ar.cpp  ar_backend.cpp  backend.cpp
src/libbinfmt/backends/: ar.cpp  backends.cpp  coff.cpp  elf.cpp  macho.cpp  pe.cpp
src/libbinfmt/coff/: backend.cpp  coff.cpp  coff_backend.cpp
src/libbinfmt/elf/: backend.cpp  elf.cpp  elf_backend.cpp
src/libbinfmt/macho/: macho.cpp  macho_backend.cpp
src/libbinfmt/pe/: backend.cpp  pe.cpp  pe_backend.cpp
src/libcore/: CMakeLists.txt  array.h  assert.cpp  ast.cpp  base64.cpp  bass.cpp  bass.h  bits.cpp  bitset.cpp  bitset.h  buf.cpp  buf_pool.cpp  buffer.cpp  buffer.h  config.cpp  configure.in.h  context.cpp  context.h  decimal.cpp  eav.cpp  env.cpp  error.cpp  error.h  event.cpp  ffi.cpp  filesys.cpp  format.cpp  format.h  forth.cpp  gap_buf.cpp  getopt.cpp  gfx.h  hash_common.cpp  hashable.h  hashtable.h  integer.cpp  intern.cpp  intern.h  ipc.cpp  job.cpp  (+37 more)
src/libcore-test/: CMakeLists.txt  array_tests.cpp  assoc_array_tests.cpp  avl_tests.cpp  bintree_tests.cpp  bitset_tests.cpp  bst_tests.cpp  buddy_tests.cpp  buf_tests.cpp  config_tests.cpp  cxx_tests.cpp  digraph_tests.cpp  eav_tests.cpp  env_tests.cpp  error_tests.cpp  ffi_kernel.cpp  ffi_tests.cpp  filesys_tests.cpp  gap_buf_tests.cpp  getopt_tests.cpp  graphviz_tests.cpp  hashtab_tests.cpp  hashtable_tests.cpp  intern_tests.cpp  job_tests.cpp  leb128_tests.cpp  list_tests.cpp  main.cpp  memory_tests.cpp  obj_pool_tests.cpp  path_tests.cpp  proxy_array_tests.cpp  queue_tests.cpp  rbt_tests.cpp  scm_tests.cpp  set_tests.cpp  slice_tests.cpp  stable_array_tests.cpp  stack_tests.cpp  str_array_tests.cpp  (+8 more)
src/libcore/array/: array.h
src/libcore/bass/: system.cpp  system.h
src/libcore/bitset/: bitset.h
src/libcore/chibi/: eval.c  gc.c  gc_heap.c  sexp.c  simplify.c  vm.c
src/libcore/chibi/tools/: chibi-ffi
src/libcore/context/: system.cpp  system.h
src/libcore/cxx/: cxx.cpp  cxx.h  module.cpp  program.cpp  scope.cpp  serializer.cpp  types.cpp  types.h
src/libcore/error/: system.cpp  system.h
src/libcore/fe/src/: fe.c  fe.cpp  fe.h
src/libcore/format/: system.cpp  system.h
src/libcore/gfx/: types.h
src/libcore/graphics/: types.h
src/libcore/graphviz/: gv.cpp
src/libcore/hash/: adler.cpp  blake3.cpp  crc.cpp  murmur.cpp  symbol.cpp
src/libcore/hashing/: adler.h  blake3.h  crc.cpp  crc.h  hashable.h  murmur.cpp  murmur.h  symbol.cpp  symbol.h
src/libcore/hashtable/: hashtable.h
src/libcore/intern/: intern.cpp  intern.h
src/libcore/log/system/: default.cpp  spdlog.cpp  syslog.cpp
src/libcore/memory/: bump_system.cpp  bump_system.h  default_system.cpp  default_system.h  dlmalloc_system.cpp  dlmalloc_system.h  dyn_alloc.cpp  memory.cpp  memory.h  meta.cpp  page_system.cpp  page_system.h  proxy.cpp  proxy.h  proxy_system.cpp  proxy_system.h  scm_alloc.cpp  slab_system.cpp  slab_system.h  std_alloc.cpp  std_allocator.h  system.cpp  system.h  trace_system.cpp  trace_system.h
src/libcore/memory/system/: base.cpp  buddy.cpp  bump.cpp  default.cpp  dl.cpp  dlmalloc.c  page.cpp  proxy.cpp  scratch.cpp  slab.cpp  stack.cpp  temp.cpp  (+1 more)
src/libcore/profiler/: stopwatch.cpp  stopwatch.h  system.cpp  system.h
src/libcore/scm/: basic_block.cpp  bytecode.cpp  compiler.cpp  emitter.cpp  kernel.cpp  scm.cpp  system.cpp  vm.cpp
src/libcore/slice/: slice.h
src/libcore/source/: buffer.cpp  buffer.h
src/libcore/stack/: stack.h
src/libcore/string/: ascii_string.h  formatters.h  intern.cpp  intern.h  str.cpp  str.h  utf8_string.h
src/libcore/timers/: system.cpp  system.h
src/libcore/wasm/: decoder.cpp  encoder.cpp  formatter.cpp  wasm.cpp
src/libgfx/: CMakeLists.txt  alloc_window.cpp  app.cpp  configure.in.h  ed.cpp  font.cpp  gfx.cpp  icons.cpp  icons_texture.cpp  imgui_extensions.cpp
src/libgfx-test/: CMakeLists.txt  app.cpp  app.h  main.cpp  test_app.cpp  test_app.h
src/libgfx/clip/: clip.cpp  clip_none.cpp  clip_win.cpp  image.cpp
src/libgfx/freetype/: CMakeLists.txt
src/libgfx/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_freetype.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/libgfx/implot/: implot.cpp  implot_items.cpp
src/libgfx/tool/: alloc.cpp  errors.cpp  prop_editor.cpp  strings.cpp
src/libobjfmt/: CMakeLists.txt  coff.cpp  configure.in.h  container.cpp  elf.cpp  macho.cpp  objfmt.cpp  pe.cpp  system.cpp  types.cpp
src/libobjfmt-test/: CMakeLists.txt  elf_tests.cpp  main.cpp  pe_tests.cpp  test.h
src/libvm/: CMakeLists.txt  bytecode.cpp  configure.in.h  vm.cpp
src/libvm-test/: CMakeLists.txt  bytecode_tests.cpp  main.cpp
src/objdump/: CMakeLists.txt  configure.in.h  main.cpp
src/scm/: CMakeLists.txt  configure.in.h  main.cpp
test/: CMakeLists.txt  array_tests.cpp  hashtable_tests.cpp  intern_tests.cpp  main.cpp  slice_tests.cpp  stack_tests.cpp
(+242 files in other folders)
